--- a/requirements.txt
+++ b/requirements.txt
@@ -5,18 +5,22 @@ charset-normalizer==3.2.0
 cryptography==41.0.2
 defusedxml==0.7.1
 diff-match-patch==20230430
+dj-database-url==0.5.0
 Django==4.2.3
 django-allauth==0.54.0
 django-countries==7.5.1
 django-crispy-forms==1.14.0
 env==0.1.0
 et-xmlfile==1.1.0
+gunicorn==21.2.0
 idna==3.4
 MarkupPy==1.14
 oauthlib==3.2.2
 odfpy==1.4.1
 openpyxl==3.1.2
+packaging==23.1
 Pillow==10.0.0
+psycopg2==2.9.6
 pycparser==2.21
 PyJWT==2.8.0
 python3-openid==3.2.0
